--- a/aboutme.html
+++ b/aboutme.html
@@ -221,7 +221,7 @@
             <span>Autobiography</span>
         </h1>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="aboutme.html">About me</a>
             <a href="hobbies.html">Hobbies</a>
             <a href="contact.html">Contact</a>
